--- a/package.json
+++ b/package.json
@@ -95,5 +95,7 @@
     "webpack-stream": "^3.1.0",
     "yargs": "^1.3.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "request": "^2.74.0"
+  }
 }
