--- a/package.json
+++ b/package.json
@@ -95,7 +95,5 @@
     "webpack-stream": "^3.1.0",
     "yargs": "^1.3.1"
   },
-  "dependencies": {
-    "request": "^2.74.0"
-  }
+  "dependencies": {}
 }
